# nub

./: .dockerignore  .gitignore  .gitmodules  .vercelignore  .worktreeinclude  AGENTS.md  Cargo.toml  Cross.toml  L1_AGENTS.md  Makefile  PROSE.md  README.md  bin  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.agents/plugins/: marketplace.json
.claude/: prod-readiness-audit.js  settings.json  v0.1-launch-impl.js  worker-and-cli-impl.js
.claude/hooks/: agent-dispatch.mjs  agent-dispatch.ts  agent-must-be-background.sh  fray-agent-liveness.mjs  fray-agent-status.mjs  fray-push-before-rest.mjs  fray-record-binding.mjs  fray-reminder.mjs  fray-stop-reminder.mjs  fray-subagent-rest.mjs  iw-reminder.mjs  iw-reminder.sh  iw-reminder.ts  post-compact-reground.mjs  post-compact-reground.ts  session-seed.mjs
.fray/: merge-queue.jsonl  start-md-nub-skill-offer.md
.github/: prose-style.md  renovate.json  subagent-guide.md
.github/scripts/: heal-test.sh
.github/workflows/: aube-parity.yml  ci.yml  daily-driver.yml  docker-smoke.yml  download-stats.yml  launcher.yml  lockfile-roundtrip.yml  native-deps.yml  pnpm-conformance.yml  release.yml  test-install.yml  verify-install.yml
.opencode/: opencode.json  package-lock.json  package.json
.opencode/agent/: explore.md  fray-architect.md  fray-aube-engineer.md  fray-docs-writer.md  fray-frontend-inspector.md  fray-harvester.md  fray-implementer.md  fray-researcher.md  fray-reviewer.md  fray-scout.md  fray-verifier.md  general.md
.opencode/commands/: fray-validate.md  fray.md
.opencode/fray/: core.mjs  index.mjs
.opencode/plugins/: fray.ts
benches/: README.md
benchmarks/: results.md
benchmarks/pm/: README.md  add-dep.mjs  fixture-b.package.json  nub-bench-patches.diff
crates/nub-cli/: Cargo.toml  build.rs
crates/nub-cli/assets/: nub-env.d.ts
crates/nub-cli/src/: cli.rs  main.rs  pm_engine.rs
crates/nub-cli/src/agent/: agents_md.rs  artifacts.rs  detect.rs  mod.rs  package_json.rs  prompt.rs  tsconfig.rs
crates/nub-cli/src/init/: mod.rs  package_json.rs  scaffold.rs  tsconfig.rs  types_wiring.rs
crates/nub-cli/src/pm_engine/: bun_config.rs  config_scope.rs  identity.rs  info_family.rs  install_family.rs  log.rs  mod.rs  present.rs  publish_family.rs  store_config_family.rs  unsupported_config.rs  use_align.rs  use_nub.rs
crates/nub-cli/tests/: bun_basic_config.rs  cli_grammar_parity.rs  import_cjs_require_cache.rs  info_engine.rs  install_engine.rs  integration.rs  pm_identity.rs  pm_publish_store_config.rs  pm_shim.rs  pm_shim_windows.rs  pm_two_mode.rs  pm_verbs.rs  process_identity.rs  resolution_compat.rs  workspace_run.rs  yarn_classic_config.rs
crates/nub-core/: Cargo.toml
crates/nub-core/benches/: cache_hash.rs  workspace_filter.rs
crates/nub-core/benches/fixtures/: medium.ts
crates/nub-core/src/: lib.rs  pnp.rs
crates/nub-core/src/node/: discovery.rs  feature_matrix.rs  flags.rs  mod.rs  spawn.rs  version.rs
crates/nub-core/src/pm/: extract.rs  lockfile_version.rs  mod.rs  provision.rs  registry.rs  resolve.rs  shim.rs
crates/nub-core/src/version_management/: download.rs  extract.rs  manage.rs  mod.rs  node_index.rs
crates/nub-core/src/workspace/: detect.rs  env.rs  filter.rs  scripts.rs
crates/nub-native/: Cargo.toml
crates/nub-native/src/: cache.rs  detect.rs  lib.rs  resolve.rs  transform.rs  tsconfig.rs
npm/: build-local.sh
npm/nub/: README.md  package.json  postinstall.js  shims.js
npm/nub-darwin-arm64/: package.json
npm/nub-darwin-x64/: package.json
npm/nub-linux-arm64/: package.json
npm/nub-linux-arm64-musl/: package.json
npm/nub-linux-x64/: package.json
npm/nub-linux-x64-musl/: package.json
npm/nub-types/: README.md  index.d.ts  package.json
npm/nub-win32-arm64/: package.json
npm/nub-win32-x64/: package.json
runtime/: floor-builtin.mjs  pnp-bin-resolver.cjs  pnp-bin-run.cjs  pnp-util.cjs  polyfills.cjs  preload-async-hooks.mjs  preload-common.cjs  preload.cjs  preload.mjs  transform-core.mjs  version.mjs  worker-polyfill.mjs
scripts/: check-docs-links.ts  ci-watch.ts  merge-cascade.ts  new-worktree.ts  release-notify.ts  worktree.sh
scripts/fray/: codex-dispatch-preflight.mjs  codex-reminder.mjs  config.mjs  index.mjs  merge-queue.mjs
scripts/md-toc/: index.mjs  package-lock.json  package.json
scripts/todo/: example.md  index.mjs
setup/: DESIGN.md  README.md  action.yml
site/: mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
site/public/: install.ps1  install.sh  skill.md  start.md  twitter-install.source.html
site/src/: middleware.ts
skills/nub/: SKILL.md
stats/download-counts/: 20260617T001500Z.json  20260618T001500Z.json  README.md  report.mjs
tests/: run-node-compat.sh
tests/aube-bats/: README.md  known-gaps.txt  run.sh  skips.txt
tests/aube-conformance/: README.md  expected-failures.txt  run.sh
tests/bench/: README.md  gen-fixtures.sh  run-bin-runner-pure.sh  run-script-runner-pure.sh  run-script-runner-vs-node.sh  run-script-runner.sh  run-warm-gvs.sh  run.sh
tests/brand-global/: run.sh
tests/brand-lint/: check-env-reads.sh
tests/brand-runtime/: run.sh
tests/brand-sweep/: run.sh
tests/config-scope/: README.md  run-matrix.sh
tests/conformance/: README.md  expected-failures.txt  run-pnpm11.sh  run.sh
tests/conversion/: README.md  expected-failures.txt  run.sh
tests/cross-runtime/: results.json  run.mjs
tests/daily-driver/: README.md  make-fixture.sh  run.sh
tests/docker-smoke/: Dockerfile.glibc  Dockerfile.musl  README.md  docker-smoke.sh  smoke.sh
tests/fixtures/: package.json
tests/flag-parsing/: flag-parsing.test.mjs
tests/launcher/: Dockerfile.non-owner  README.md  assert.sh  docker-non-owner.sh  make-fixture.sh  run-launcher-matrix.sh
tests/mutation/: README.md  compare-graphs.mjs  expected-failures.txt  extract-graph.mjs  run-mutations.sh
tests/native-deps/: README.md  package.json  run.sh  verify-load.cjs
tests/pnp/: Dockerfile.pnp  README.md  docker-matrix.sh  make-fixture-ws.sh  make-fixture.sh  run-pnp-matrix.sh
(+296 files in other folders)
