[workspace]
members = ["crates/nub-cli", "crates/nub-core", "crates/nub-native"]
resolver = "3"

[workspace.package]
version = "0.0.20"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/nubjs/nub"

[workspace.dependencies]
anyhow = "1"
camino = "1"
ctrlc = "3"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
json5 = "0.4"
jsonc-parser = { version = "0.24", features = ["serde"] }
# napi 3 (not 2): oxc_napi 0.132.0 and oxc_sourcemap[napi] are built against
# napi 3, and a single cdylib cannot mix napi-2 and napi-3 `#[napi]` derives
# (the OxcError / SourceMap return types would fail to bridge). napi 3 is the
# version oxc itself ships on. The `napi8` feature pins the NAPI-version FLOOR to
# 8 (node_api_version 8 — available since Node 12.22/14.12/15.0, comfortably below
# the 18.19 floor) so any accidental higher-API use fails at compile-time rather
# than at load on 18.19. serde-json preserves the bridge the data parsers rely on.
napi = { version = "3", features = ["serde-json", "napi8"] }
napi-derive = "3"
# oxc transpiler — pinned EXACT to the oxc-transform npm version nub ships today
# (see package.json: oxc-transform/oxc-parser/@oxc-project/runtime are all 0.132.0).
# The internal Rust crates carry the SAME version number as the napi release;
# oxc_sourcemap is independently versioned (oxc_codegen 0.132.0 depends on
# oxc_sourcemap ^6.0.1). Any oxc bump must move in lockstep with the npm pin AND a
# NUB_VERSION bump (transpile-cache buster). DO NOT float without re-running the
# transpile-parity gate. OXC_VERSION = 0.132.0
oxc = { version = "=0.132.0", features = ["full"] }
oxc_napi = "=0.132.0"
oxc_sourcemap = { version = "=6.0.1", features = ["napi"] }
rustc-hash = "2"
# PATH lookup for the unpinned-PM passthrough fallback (`nub add foo` with no
# `packageManager` pin): resolve the project's lockfile-detected PM on PATH.
which = "8"
toml = "0.8"
yaml-rust2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Node provisioning download (wiki/research/node-provisioning-implementation.md):
# blocking + rustls (no OpenSSL/cross-compile pain), native roots so corporate
# MITM CAs work, socks for SOCKS proxies. reqwest gives HTTP(S)_PROXY/NO_PROXY
# for free. NOT async — provisioning is a short at-most-once-per-version step.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "rustls-tls-native-roots", "socks"] }
# xz extraction of the dist tarball. liblzma's "static" vendors its own C liblzma
# (no system dependency, no shell-out to tar/xz); the maintained xz2 successor.
liblzma = { version = "0.4", features = ["static"] }
# gzip decode of PM registry tarballs (npm publishes .tgz = gzip+tar). Pure Rust
# (miniz_oxide backend), no system zlib / shell-out — mirrors the in-process,
# verify-then-extract posture of the Node xz path.
flate2 = "1"
tar = "0.4"
# Windows .zip Node-dist extraction (pure Rust, no shell-out to Expand-Archive /
# tar.exe). default-features off + `deflate` only: Node's win-<arch>.zip uses
# DEFLATE, so we skip bzip2/zstd/lzma/aes backends and their C deps. Keeps the
# checksum-verify-then-extract flow in one process, deterministic across Windows
# versions. Builds on every target; the .zip path just isn't exercised on unix.
zip = { version = "8.6", default-features = false, features = ["deflate"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
