[package]
name = "nub-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nub"
path = "src/main.rs"

[dependencies]
nub-core = { path = "../nub-core" }
# Vendored aube (vendor/aube git submodule, nubjs/aube fork). aube-lockfile
# is a pure library crate (no CLI/tokio surface); `aube` is the command layer
# as a library (lib target landed in nubjs/aube@b15cdcb) — `nub install` /
# `nub ci` route through `aube::commands::install::run` in-process instead of
# shelling out. See vendor/aube/AGENTS.md and src/pm_engine.rs.
aube-lockfile = { path = "../../vendor/aube/crates/aube-lockfile" }
aube-manifest = { path = "../../vendor/aube/crates/aube-manifest" }
aube = { path = "../../vendor/aube/crates/aube" }
anyhow.workspace = true
clap.workspace = true
dotenvy = "0.15"
serde_json.workspace = true
semver = "1"
sha2.workspace = true
tracing.workspace = true
tempfile = "3"
# Multi-thread runtime for the embedded aube install engine (pm_engine.rs).
# Mirrors aube's own cli_main runtime shape; tokio is dormant on every other
# nub code path.
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
