[package]
name = "nub-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nub"
path = "src/main.rs"

[dependencies]
nub-core = { path = "../nub-core" }
# Vendored aube (vendor/aube git submodule, nubjs/aube fork). aube-lockfile
# is a pure library crate (no CLI/tokio surface); `aube` is the command layer
# as a library (lib target landed in nubjs/aube@b15cdcb) — `nub install` /
# `nub ci` route through `aube::commands::install::run` in-process instead of
# shelling out. See vendor/aube/AGENTS.md and src/pm_engine/.
aube-lockfile = { path = "../../vendor/aube/crates/aube-lockfile" }
aube-manifest = { path = "../../vendor/aube/crates/aube-manifest" }
aube = { path = "../../vendor/aube/crates/aube" }
# `EffectiveFilter` for the workspace-aware engine verbs (`nub publish
# --filter/-r`); same type aube's own dispatch passes to publish/list/etc.
aube-workspace = { path = "../../vendor/aube/crates/aube-workspace" }
# Settings metadata (`meta::SETTINGS`): drives the npmrc-first config write
# routing in pm_engine/store_config_family.rs (npmShared flag, alias
# spellings, scalar-vs-map types).
aube-settings = { path = "../../vendor/aube/crates/aube-settings" }
# Registry URL normalization helpers for translating incumbent Bun config into
# the engine's existing `.npmrc`-shaped registry/auth model.
aube-registry = { path = "../../vendor/aube/crates/aube-registry" }
# Engine error-code constants + the bespoke exit-code table; consumed by the
# presentation layer (src/pm_engine/present.rs) for the ERR_AUBE_→ERR_NUB_
# rewrite and the cli_main-compatible exit mapping.
aube-codes = { path = "../../vendor/aube/crates/aube-codes" }
# Build-script trust policy: `enableScripts: false` (yarn) forces
# `BuildPolicy::deny_all()` to override even nub's defaultTrust floor
# (pm_engine/unsupported_config.rs). Same path-dep shape as the rest.
aube-scripts = { path = "../../vendor/aube/crates/aube-scripts" }
# Diagnostics / critical-path recorder: nub's engine_session calls diag::init()
# so AUBE_DIAG_* env vars work when nub install runs the embedded aube engine.
aube-util = { path = "../../vendor/aube/crates/aube-util" }
# Same major + `fancy` as vendor/aube — present.rs renders the engine's
# miette::Report exactly as aube's own cli_main would, then rewrites it.
miette = { version = "7", features = ["fancy"] }
anyhow.workspace = true
base64 = "0.22"
# Global allocator for the `nub` binary only. NOT added to crates/nub-native
# (the cdylib loaded into Node) — that must not hijack Node's allocator.
mimalloc = "0.1"
clap.workspace = true
# Same major as vendor/aube: `nubx -q` switches the engine's progress UI to
# text mode via clx::progress::set_output, the same knob aube's own startup
# flips for --silent (vendor/aube/crates/aube/src/startup.rs).
clx = "2"
dirs-next.workspace = true
dotenvy = "0.15"
# `preserve_order` keeps serde_json::Map in INSERTION order (IndexMap-backed) so
# pm_engine's config rewrites (use_nub.rs, config_scope.rs, store_config_family.rs)
# preserve the user's existing key order rather than alphabetizing the file.
serde_json = { workspace = true, features = ["preserve_order"] }
rustc-hash.workspace = true
semver = "1"
# pnpm-workspace.yaml read + regeneration for `nub pm use nub` / `use pnpm`
# (pm_engine/use_nub.rs). serde_yaml is archived/unmaintained; serde_yaml_ng
# is the maintained, API-compatible fork, aliased as `serde_yaml` so the
# source paths are unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2.workspace = true
tracing.workspace = true
tempfile = "3"
toml.workspace = true
# Multi-thread runtime for the embedded aube install engine (pm_engine.rs).
# Mirrors aube's own cli_main runtime shape; tokio is dormant on every other
# nub code path.
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
url = "2.5"

[target.'cfg(unix)'.dependencies]
# fd-level capture of the engine's raw println/eprintln hint lines so the
# brand rewrite can reach them (pm_engine/install_family.rs::with_fd_captured).
libc.workspace = true

[target.'cfg(windows)'.dependencies]
# CRT fd-level capture (_dup/_dup2/_pipe/_read) so `with_fd_captured` works on
# Windows too — load-bearing for `config get registry`'s default-registry
# substitution, which detects the engine's `undefined` print from the capture
# (pm_engine/mod.rs::with_fd_captured). Without it the substitution silently
# breaks and the default registry is never surfaced on Windows.
libc.workspace = true
