[package]
name = "nub-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
libc.workspace = true
dirs-next.workspace = true
dotenvy = "0.15"
flate2.workspace = true
glob-match = "0.2"
liblzma.workspace = true
reqwest.workspace = true
rustc-hash.workspace = true
semver = "1"
serde.workspace = true
# `preserve_order` makes serde_json::Map keep INSERTION order (IndexMap-backed).
# Load-bearing for the pin writers in `pm::resolve`: a `package.json` round-trip
# must not alphabetize the user's keys (a pin write that reorders the manifest
# reads as vandalism in the diff). nub-native enables the same feature for its
# tsconfig hashing; declaring it here keeps nub-core's behavior identical with
# and without feature unification against nub-native.
serde_json = { workspace = true, features = ["preserve_order"] }
# sha1 (ancient PM publishes carry only a sha1 dist.shasum) sits alongside sha2.
# Pinned 0.10 to share `digest` 0.10 with sha2 — a single Digest trait, no second
# major. sha512 is preferred; sha1 is the fail-closed fallback only.
sha1 = "0.10"
sha2.workspace = true
tar.workspace = true
zip.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Unix-only: terminating-signal forwarding to the child (SIGINT/SIGTERM/SIGHUP).
# Gated so the Windows build (which uses a different ctrl_c path) doesn't pull it.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
criterion.workspace = true
blake3 = { workspace = true }

[[bench]]
name = "workspace_filter"
harness = false

[[bench]]
name = "cache_hash"
harness = false
