[package]
name = "nub-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde_json.workspace = true
json5.workspace = true
jsonc-parser.workspace = true
toml.workspace = true
yaml-rust2.workspace = true
# Transpiler (TS/JSX/non-erasable syntax) — moved in-process from the oxc-transform
# npm package. Mirrors oxc-transform@0.132.0's transformSync for byte parity.
oxc.workspace = true
oxc_napi.workspace = true
oxc_sourcemap.workspace = true
rustc-hash.workspace = true

[build-dependencies]
napi-build = "2"
