[package]
name = "nub-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
# nub-native is a Node N-API addon: its `napi_*` symbols are resolved by the Node
# host at dlopen, never at link time. A cdylib links fine (undefined symbols are
# allowed), but a `cargo test` harness is a normal executable and CANNOT link those
# symbols (`undefined symbol: napi_create_object`). The crate has no unit/doc tests
# anyway — it's exercised by loading the built addon into Node (the nub-cli
# integration suite). So opt it out of `cargo test` to keep bare `cargo test`
# (whole-workspace, as CI runs) green. Regressed when oxc_napi pulled napi 3 in.
test = false
doctest = false

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde_json.workspace = true
json5.workspace = true
jsonc-parser.workspace = true
toml.workspace = true
yaml-rust2.workspace = true
# Transpiler (TS/JSX/non-erasable syntax) — moved in-process from the oxc-transform
# npm package. Mirrors oxc-transform@0.132.0's transformSync for byte parity.
oxc.workspace = true
oxc_napi.workspace = true
oxc_sourcemap.workspace = true
rustc-hash.workspace = true

[build-dependencies]
napi-build = "2"
