[package]
name = "nub-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
# nub-native is a Node N-API addon: its `napi_*` symbols are resolved by the Node
# host at dlopen, never at link time. A cdylib links fine (undefined symbols are
# allowed), but a `cargo test` harness is a normal executable and CANNOT link those
# symbols (`undefined symbol: napi_create_object`). The crate has no unit/doc tests
# anyway — it's exercised by loading the built addon into Node (the nub-cli
# integration suite). So opt it out of `cargo test` to keep bare `cargo test`
# (whole-workspace, as CI runs) green. Regressed when oxc_napi pulled napi 3 in.
test = false
doctest = false

[dependencies]
napi.workspace = true
napi-derive.workspace = true
# `preserve_order` makes serde_json::Map keep INSERTION order (IndexMap-backed)
# rather than sorting keys. This is load-bearing for `tsconfig_hash` byte-parity:
# the old JS computed the cache-key component as `JSON.stringify(compilerOptions)`
# over the get-tsconfig-normalized object, whose key order is the JSONC-parse +
# extends-merge + normalize INSERTION order. Re-serializing here must reproduce
# that order exactly, or every transpile-cache key shifts.
serde_json = { workspace = true, features = ["preserve_order"] }
json5.workspace = true
jsonc-parser.workspace = true
toml.workspace = true
yaml-rust2.workspace = true
# Transpiler (TS/JSX/non-erasable syntax) — moved in-process from the oxc-transform
# npm package. Mirrors oxc-transform@0.132.0's transformSync for byte parity.
oxc.workspace = true
oxc_napi.workspace = true
oxc_sourcemap.workspace = true
rustc-hash.workspace = true
# tsconfig discovery/parse/extends + the transpile cache (moved in-process from
# the get-tsconfig npm package and the JS cache). serde drives the RawTsconfig /
# CompilerOptions deserialization; blake3 computes the cache key + integrity
# prefix (SIMD content hash, replaced SHA-256 on the warm path).
serde.workspace = true
blake3.workspace = true

[build-dependencies]
napi-build = "2"
